[tool.poetry]
name = "links-shortener"
version = "0.1.0"
description = ""
authors = [""] 
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
alembic = "^1.13.1"
SQLAlchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
